test/sema/positive/address01.impala
fn f(&int) -> () {}

fn main() -> () {
    let mut i: int = 42;
    f(&i)
}
